--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.2.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,10 +19,19 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven{
+            url 'https://maven.google.com'
+        }
+        maven{
+            url 'http://dl.bintray.com/glomadrian/maven'
+        }
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+
